--- a/src/app/styles/responsive.css
+++ b/src/app/styles/responsive.css
@@ -79,14 +79,6 @@
         display: none;
     }
 
-    .ts-cloud-login-prompt-title-full {
-        display: none;
-    }
-
-    .ts-cloud-login-prompt-title-mobile {
-        display: inline;
-    }
-
     .ts-dungeon-panel .ts-panel-meta {
         display: none;
     }
